adding some routes
