# app/routes/userRoute.js
@@ -14,4 +14,12 @@ module.exports = function (app) {
     app.route('/user/:userId/type')
         .get(user.list_type_user)
         .post(user.add_type_user);
+
+    app.route('/users/user/by/login/:userLogin')
+        .get(user.read_user_by_login)
+        .put(user.update_user_by_login);
+
+    app.route('/users/history/by/id/:userId')
+        .get(user.read_user_history)
+        .post(user.create_user_history);
 };
